# doc-doctor

./: .gitignore  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  versions.json
core/: Cargo.toml
core/crates/doc-doctor-application/: Cargo.toml
core/crates/doc-doctor-application/src/: error.rs  lib.rs  switchboard.rs
core/crates/doc-doctor-application/src/use_cases/: analyze.rs  batch.rs  mod.rs  service.rs  validate.rs
core/crates/doc-doctor-cli/: Cargo.toml
core/crates/doc-doctor-cli/src/: config.rs  main.rs
core/crates/doc-doctor-cli/src/commands/: batch.rs  config.rs  dashboard.rs  dimensions.rs  health.rs  mod.rs  parse.rs  schema.rs  stubs.rs  test.rs  usefulness.rs  validate.rs
core/crates/doc-doctor-cli/src/output/: mod.rs
core/crates/doc-doctor-cli/src/tui/: app.rs  mod.rs  terminal.rs  theme.rs
core/crates/doc-doctor-cli/src/tui/widgets/: content_viewer.rs  dashboard.rs  document_viewer.rs  mod.rs  progress.rs  stub_list.rs  tables.rs  tests.rs  thought_stream.rs
core/crates/doc-doctor-config-yaml/: Cargo.toml
core/crates/doc-doctor-config-yaml/src/: file_provider.rs  lib.rs  paths.rs
core/crates/doc-doctor-core/: Cargo.toml
core/crates/doc-doctor-core/src/: error.rs  lib.rs
core/crates/doc-doctor-core/src/dimensions/: mod.rs  network.rs  priority.rs  state.rs  trajectory.rs
core/crates/doc-doctor-core/src/parser/: frontmatter.rs  mod.rs  position.rs  yaml_strict.rs
core/crates/doc-doctor-core/src/stubs/: mod.rs  stub_form.rs  stub_type.rs  sync.rs  vector.rs
core/crates/doc-doctor-core/src/types/: audience.rs  l1_intrinsic.rs  mod.rs  refinement.rs  validation.rs
core/crates/doc-doctor-domain/: Cargo.toml
core/crates/doc-doctor-domain/src/: config.rs  lib.rs
core/crates/doc-doctor-domain/src/calculations/: mod.rs  state.rs  trajectory.rs
core/crates/doc-doctor-domain/src/entities/: audience.rs  document.rs  form.rs  mod.rs  origin.rs  refinement.rs  stub.rs
core/crates/doc-doctor-domain/src/errors/: mod.rs  validation.rs
core/crates/doc-doctor-domain/src/ports/: mod.rs
core/crates/doc-doctor-domain/src/ports/inbound/: analyze.rs  batch.rs  calculate.rs  mod.rs  validate.rs
core/crates/doc-doctor-domain/src/ports/outbound/: config_provider.rs  mod.rs  parser.rs  repository.rs  rules.rs  schema.rs
core/crates/doc-doctor-domain/src/schemas/: frontmatter.json  stubs.json
core/crates/doc-doctor-ffi/: Cargo.toml
core/crates/doc-doctor-ffi/src/: lib.rs  napi.rs  wasm.rs
core/crates/doc-doctor-mcp/: Cargo.toml
core/crates/doc-doctor-mcp/src/: main.rs
core/crates/doc-doctor-mcp/src/integrations/: git.rs  mod.rs  smart_connections.rs
core/crates/doc-doctor-mcp/src/protocol/: mod.rs
core/crates/doc-doctor-mcp/src/tools/: handlers.rs  mod.rs
core/crates/doc-doctor-parser-yaml/: Cargo.toml
core/crates/doc-doctor-parser-yaml/src/: error.rs  frontmatter.rs  lib.rs  parser.rs  position.rs
core/crates/doc-doctor-wasm/: Cargo.toml  types.d.ts
core/crates/doc-doctor-wasm/src/: bindings.rs  lib.rs  types.rs
docs/: ARCH-hexagonal.md  PRD-full-mcp-integration.md  PRD-mcp-operations.md  PRD-obsidian-plugin-agentic-ui.md  PRD-rust-core.md  PRD-stubs-support.md  SPEC-bidirectional-sync.md  SPEC-configuration-schema.md  SPEC-llm-stub-suggestions.md  SPEC-yaml-parsing.md
src/: main.ts
src/commands/ai/: ai-commands.ts  context-builder.ts  index.ts
src/explore-view/: explore-store.ts
src/explore-view/components/: explore-panel.svelte  related-note-item.svelte  semantic-search.svelte
src/llm/: builtin-prompts.ts  firecrawl-service.ts  index.ts  llm-prompts.ts  llm-service.ts  llm-settings-reducer.ts  llm-types.ts  prompt-loader.ts  prompt-schema.ts  prompts-settings-reducer.ts
src/mcp/: index.ts  mcp-client.ts  mcp-settings-reducer.ts  mcp-tools.ts  mcp-types.ts
src/settings/: default-settings.ts  settings-reducer.ts  settings-type.ts
src/settings/settings-tab/: explore-settings.ts  general-settings.ts  llm-settings.ts  mcp-settings.ts  prompts-settings.ts  settings-tab.ts
src/sidebar-outline/: sidebar-outline-view.ts
src/sidebar-outline/components/: sidebar-outline.svelte
src/sidebar-outline/components/components/ai-view/: ai-controls-bar.svelte  ai-view.svelte
src/sidebar-outline/components/components/controls-bar/: controls-bar.store.ts  controls-bar.svelte
src/sidebar-outline/components/components/controls-bar/components/: annotations-search.svelte  extra-buttons.svelte  view-mode-switcher.svelte
src/sidebar-outline/components/components/explore-view/: explore-controls-bar.svelte
src/sidebar-outline/components/components/stubs-list/: no-stubs.svelte  stub-item.svelte  stubs-controls-bar.svelte  stubs-list.svelte  stubs-search.svelte  stubs-sidebar-settings.svelte  suggestions-panel.svelte
src/smart-connections/: direct-api.ts  fallback.ts  index.ts  service.ts  settings-reducer.ts  types.ts
src/stubs/: index.ts  llm-analysis-store.ts  stubs-defaults.ts  stubs-settings-reducer.ts  stubs-store.ts  stubs-types.ts
src/stubs/commands/: index.ts  stubs-commands.ts
src/stubs/components/: index.ts  no-stubs.svelte  orphans-panel.svelte  stub-item.svelte  stub-type-filter.svelte  stub-type-group.svelte  stubs-controls-bar.svelte  stubs-list.svelte  stubs-panel.svelte
src/stubs/editor/: index.ts  stubs-decorations.ts  stubs-editor-plugin.ts
src/stubs/editor-suggest/: stub-suggest.ts
src/stubs/helpers/: anchor-utils.ts  stubs-navigation.ts  stubs-parser.ts  stubs-sync.ts
src/stubs/settings/: stubs-settings.ts
