[workspace]
resolver = "2"
members = [
    "crates/doc-doctor-domain",
    "crates/doc-doctor-parser-yaml",
    "crates/doc-doctor-config-yaml",
    "crates/doc-doctor-application",
    "crates/doc-doctor-wasm",
    "crates/doc-doctor-core",
    "crates/doc-doctor-ffi",
    "crates/doc-doctor-mcp",
    "crates/doc-doctor-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Josue Guevara <jjjjguevara@github.com>"]
repository = "https://github.com/jjjjguevara/doc-doctor"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# File patterns
glob = "0.3"

# Parallel processing
rayon = "1.8"

# WASM bindings
wasm-bindgen = "0.2"

# Testing
pretty_assertions = "1.4"

# Path handling
dirs = "5.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Console output styling
indicatif = "0.17"
console = "0.15"
tabled = "0.17"
unicode-width = "0.2"
