[package]
name = "doc-doctor-application"
description = "Application layer with use case implementations for doc-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
doc-doctor-domain = { path = "../doc-doctor-domain" }

# Error handling
thiserror = { workspace = true }

# File patterns for batch processing
glob = { workspace = true }

# Parallel processing
rayon = { workspace = true }

[dev-dependencies]
doc-doctor-parser-yaml = { path = "../doc-doctor-parser-yaml" }
pretty_assertions = { workspace = true }
