[package]
name = "doc-doctor-core"
description = "Core library for Doc Doctor - J-Editorial Framework implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
