[package]
name = "doc-doctor-mcp"
description = "MCP Server for Doc Doctor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "doc-doctor-mcp"
path = "src/main.rs"

[dependencies]
doc-doctor-core = { path = "../doc-doctor-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
