[package]
name = "doc-doctor-mcp"
description = "MCP Server for Doc Doctor - J-Editorial analysis via Model Context Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dd-mcp"
path = "src/main.rs"

[dependencies]
# Hexagonal Architecture layers
doc-doctor-domain = { path = "../doc-doctor-domain" }
doc-doctor-application = { path = "../doc-doctor-application" }
doc-doctor-parser-yaml = { path = "../doc-doctor-parser-yaml" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system utilities
glob = "0.3"
